syntax = "proto3";

package api.instance.v1;
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "validate/validate.proto";

option go_package = "aws/api/instance/v1;v1";
option java_multiple_files = true;
option java_package = "api.instance.v1";

service Instance {
  // Describes the Regions that are enabled for your account, or all Regions.
  rpc ListRegions (ListRegionsRequest) returns (ListRegionsResponse) {
    option (google.api.http) = {
      get: "/api/regions"
    };
  };
  // Describes the specified images (AMIs, AKIs, and ARIs) available to you or all of the images available to you.
  rpc ListImages (ListImagesRequest) returns (ListImagesResponse) {
    option (google.api.http) = {
      get: "/api/images"
    };
  };
  // 选择实例规格
  rpc ListInstanceTypes(ListInstanceTypesRequest) returns (ListInstanceTypesResponse) {
    option (google.api.http) = {
      get: "/api/instance-types"
    };
  };
  // 创建实例
  rpc CreateInstances (CreateInstancesRequest) returns (CreateInstancesResponse) {
    option (google.api.http) = {
      post: "/api/instances",
      body: "*"
    };
  };
  // 实例列表
  rpc ListInstances (ListInstancesRequest) returns (ListInstancesResponse) {
    option (google.api.http) = {
      get: "/api/instances"
    };
  };
  // 开机
  rpc StartInstances(StartInstancesRequest) returns (StartInstancesResponse) {
    option (google.api.http) = {
      put: "/api/instances/start",
      body: "*"
    };
  };
  // 关机
  rpc StopInstances(StopInstancesRequest) returns (StopInstancesResponse) {
    option (google.api.http) = {
      put: "/api/instances/stop",
      body: "*"
    };
  };
  // 重启
  rpc RebootInstances(RebootInstancesRequest) returns (RebootInstancesResponse) {
    option (google.api.http) = {
      put: "/api/instances/reboot",
      body: "*"
    };
  };
  // 删除实例
  rpc DeleteInstances(DeleteInstancesRequest) returns (DeleteInstancesResponse) {
    option (google.api.http) = {
      put: "/api/instances/terminate",
      body: "*"
    };
  };
}

message CreateInstancesRequest {
  // AWS Access key ID
  string access_key_id = 1 [(validate.rules).string.min_len = 1];
  // AWS Secret Access Key
  string secret_key = 2 [(validate.rules).string.min_len = 1];
  // Region is the region to send requests to.
  string region = 3 [(validate.rules).string.min_len = 1];
  // The ID of the AMI. An AMI ID is required to launch an instance and must be specified here or in a launch template.
  optional string image_id = 4 [(validate.rules).string.min_len = 1];
  // The instance type. For more information, see Instance types (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/instance-types.html) in the Amazon EC2 User Guide. Default: m1.small
  string instance_type = 5;
  // Describes a block device mapping, which defines the EBS volumes and instance store volumes to attach to an instance at launch.
  message BlockDeviceMapping {
    // The device name (for example, /dev/sdh or xvdh).
    optional string device_name = 1;
    // Describes a block device for an EBS volume.
    message EbsBlockDevice {
      // Indicates whether the EBS volume is deleted on instance termination. For more information, see Preserving Amazon EBS volumes on instance termination (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/terminating-instances.html#preserving-volumes-on-termination) in the Amazon EC2 User Guide.
      optional bool delete_on_termination = 1;
      // Indicates whether the encryption state of an EBS volume is changed while being restored from a backing snapshot. The effect of setting the encryption state to true depends on the volume origin (new or from a snapshot), starting encryption state, ownership, and whether encryption by default is enabled. For more information, see Amazon EBS encryption (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/EBSEncryption.html#encryption-parameters) in the Amazon EC2 User Guide. In no case can you remove encryption from an encrypted volume. Encrypted volumes can only be attached to instances that support Amazon EBS encryption. For more information, see Supported instance types (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/EBSEncryption.html#EBSEncryption_supported_instances). This parameter is not returned by DescribeImageAttribute (https://docs.aws.amazon.com/AWSEC2/latest/APIReference/API_DescribeImageAttribute.html).
      optional bool encrypted = 2;
      // The number of I/O operations per second (IOPS). For gp3, io1, and io2 volumes, this represents the number of IOPS that are provisioned for the volume. For gp2 volumes, this represents the baseline performance of the volume and the rate at which the volume accumulates I/O credits for bursting. The following are the supported values for each volume type:
      // * gp3: 3,000-16,000 IOPS
      // * io1:
      // 100-64,000 IOPS
      // * io2: 100-64,000 IOPS
      // For io1 and io2 volumes, we guarantee 64,000 IOPS only for Instances built on the Nitro System (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/instance-types.html#ec2-nitro-instances). Other instance families guarantee performance up to 32,000 IOPS. This parameter is required for io1 and io2 volumes. The default for gp3 volumes is 3,000 IOPS. This parameter is not supported for gp2, st1, sc1, or standard volumes.
      optional int32 iops = 3;
      // Identifier (key ID, key alias, ID ARN, or alias ARN) for a customer managed CMK under which the EBS volume is encrypted. This parameter is only supported on BlockDeviceMapping objects called by RunInstances (https://docs.aws.amazon.com/AWSEC2/latest/APIReference/API_RunInstances.html), RequestSpotFleet (https://docs.aws.amazon.com/AWSEC2/latest/APIReference/API_RequestSpotFleet.html), and RequestSpotInstances (https://docs.aws.amazon.com/AWSEC2/latest/APIReference/API_RequestSpotInstances.html).
      optional string kms_key_id = 4;
      // The ARN of the Outpost on which the snapshot is stored. This parameter is only supported on BlockDeviceMapping objects called by  CreateImage (https://docs.aws.amazon.com/AWSEC2/latest/APIReference/API_CreateImage.html).
      optional string outpost_arn = 5;
      // The ID of the snapshot.
      optional string snapshot_id = 6;
      // The throughput that the volume supports, in MiB/s. This parameter is valid only for gp3 volumes. Valid Range: Minimum value of 125. Maximum value of 1000.
      optional int32 throughput = 7;

      // The size of the volume, in GiBs. You must specify either a snapshot ID or a volume size. If you specify a snapshot, the default is the snapshot size. You can specify a volume size that is equal to or larger than the snapshot size. The following are the supported volumes sizes for each volume type:
      // * gp2 and gp3:1-16,384
      // * io1 and io2: 4-16,384
      // * st1 and sc1: 125-16,384
      // * standard: 1-1,024
      optional int32 volume_size = 8;
      // The volume type. For more information, see Amazon EBS volume types (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/EBSVolumeTypes.html) in the Amazon EC2 User Guide. If the volume type is io1 or io2, you must specify the IOPS that the volume supports.
      string volume_type = 9;
    }
    // Parameters used to automatically set up EBS volumes when the instance is launched.
    EbsBlockDevice ebs = 2;
    // To omit the device from the block device mapping, specify an empty string. When this property is specified, the device is removed from the block device mapping regardless of the assigned value.
    optional string no_device = 3;
    // The virtual device name (ephemeralN). Instance store volumes are numbered starting from 0. An instance type with 2 available instance store volumes can specify mappings for ephemeral0 and ephemeral1. The number of available instance store volumes depends on the instance type. After you connect to the instance, you must mount the volume. NVMe instance store volumes are automatically enumerated and assigned a device name. Including them in your block device mapping has no effect. Constraints: For M3 instances, you must specify instance store volumes in the block device mapping for the instance. When you launch an M3 instance, we ignore any instance store volumes specified in the block device mapping for the AMI.
    optional string virtual_name = 4;
  }
  repeated BlockDeviceMapping block_device_mapping = 6;
  // The maximum number of instances to launch. If you specify more instances than Amazon EC2 can launch in the target Availability Zone, Amazon EC2 launches the largest possible number of instances above MinCount. Constraints: Between 1 and the maximum number you're allowed for the specified instance type. For more information about the default limits, and how to request an increase, see How many instances can I run in Amazon EC2 (http://aws.amazon.com/ec2/faqs/#How_many_instances_can_I_run_in_Amazon_EC2) in the Amazon EC2 FAQ. This member is required.
  optional int32 max_count = 7;
  // The minimum number of instances to launch. If you specify a minimum that is more instances than Amazon EC2 can launch in the target Availability Zone, Amazon EC2 launches no instances. Constraints: Between 1 and the maximum number you're allowed for the specified instance type. For more information about the default limits, and how to request an increase, see How many instances can I run in Amazon EC2 (http://aws.amazon.com/ec2/faqs/#How_many_instances_can_I_run_in_Amazon_EC2) in the Amazon EC2 General FAQ. This member is required.
  optional int32 min_count = 8;
  // Checks whether you have the required permissions for the action, without actually making the request, and provides an error response. If you have the required permissions, the error response is DryRunOperation. Otherwise, it is UnauthorizedOperation.
  optional bool dry_run = 9;
}

message CreateInstancesResponse {
  google.protobuf.Any data = 1;
}

message ListInstancesRequest {
  // AWS Access key ID
  string access_key_id = 1 [(validate.rules).string.min_len = 1];
  // AWS Secret Access Key
  string secret_key = 2 [(validate.rules).string.min_len = 1];
  // Region is the region to send requests to.
  string region = 3 [(validate.rules).string.min_len = 1];
  // The maximum number of results to return in a single call. To retrieve the remaining results, make another call with the returned NextToken value. This value can be between 5 and 1000. You cannot specify this parameter and the instance IDs parameter in the same call.
  optional int32 max_results = 4;
  // The token to request the next page of results.
  optional string next_token = 5;
  // Checks whether you have the required permissions for the action, without actually making the request, and provides an error response. If you have the required permissions, the error response is DryRunOperation. Otherwise, it is UnauthorizedOperation.
  optional bool dry_run = 6;
}

message ListInstancesResponse {
  google.protobuf.Any data = 1;
}

message ListRegionsRequest {
  // AWS Access key ID
  string access_key_id = 1 [(validate.rules).string.min_len = 1];
  // AWS Secret Access Key
  string secret_key = 2 [(validate.rules).string.min_len = 1];
}

message ListRegionsResponse {
  google.protobuf.Any data = 1;
}

message ListImagesRequest {
  // AWS Access key ID
  string access_key_id = 1 [(validate.rules).string.min_len = 1];
  // AWS Secret Access Key
  string secret_key = 2 [(validate.rules).string.min_len = 1];
  // Region is the region to send requests to.
  string region = 3 [(validate.rules).string.min_len = 1];
}

message ListImagesResponse {
  google.protobuf.Any data = 1;
}

message ListInstanceTypesRequest {
  // AWS Access key ID
  string access_key_id = 1 [(validate.rules).string.min_len = 1];
  // AWS Secret Access Key
  string secret_key = 2 [(validate.rules).string.min_len = 1];
  // Region is the region to send requests to.
  string region = 3 [(validate.rules).string.min_len = 1];
  // The maximum number of results to return for the request in a single page. The remaining results can be seen by sending another request with the next token value. Valid Range: Minimum value of 5. Maximum value of 100.
  optional int32 max_results = 4;
  // The token to retrieve the next page of results.
  optional string next_token = 5;
}

message ListInstanceTypesResponse {
  google.protobuf.Any data = 1;
}

message StartInstancesRequest {
  // AWS Access key ID
  string access_key_id = 1 [(validate.rules).string.min_len = 1];
  // AWS Secret Access Key
  string secret_key = 2 [(validate.rules).string.min_len = 1];
  // Region is the region to send requests to.
  string region = 3 [(validate.rules).string.min_len = 1];
  // The IDs of the instances. This member is required.
  repeated string instance_ids = 4;
  // Checks whether you have the required permissions for the action, without actually making the request, and provides an error response. If you have the required permissions, the error response is DryRunOperation. Otherwise, it is UnauthorizedOperation.
  optional bool dry_run = 6;
}

message StartInstancesResponse {
  google.protobuf.Any data = 1;
}

message StopInstancesRequest {
  // AWS Access key ID
  string access_key_id = 1 [(validate.rules).string.min_len = 1];
  // AWS Secret Access Key
  string secret_key = 2 [(validate.rules).string.min_len = 1];
  // Region is the region to send requests to.
  string region = 3 [(validate.rules).string.min_len = 1];
  // The IDs of the instances. This member is required.
  repeated string instance_ids = 4;
  // Checks whether you have the required permissions for the action, without actually making the request, and provides an error response. If you have the required permissions, the error response is DryRunOperation. Otherwise, it is UnauthorizedOperation.
  optional bool dry_run = 6;
}

message StopInstancesResponse {
  google.protobuf.Any data = 1;
}

message RebootInstancesRequest {
  // AWS Access key ID
  string access_key_id = 1 [(validate.rules).string.min_len = 1];
  // AWS Secret Access Key
  string secret_key = 2 [(validate.rules).string.min_len = 1];
  // Region is the region to send requests to.
  string region = 3 [(validate.rules).string.min_len = 1];
  // The IDs of the instances. This member is required.
  repeated string instance_ids = 4;
  // Checks whether you have the required permissions for the action, without actually making the request, and provides an error response. If you have the required permissions, the error response is DryRunOperation. Otherwise, it is UnauthorizedOperation.
  optional bool dry_run = 6;
}

message RebootInstancesResponse {
  google.protobuf.Any data = 1;
}

message DeleteInstancesRequest {
  // AWS Access key ID
  string access_key_id = 1 [(validate.rules).string.min_len = 1];
  // AWS Secret Access Key
  string secret_key = 2 [(validate.rules).string.min_len = 1];
  // Region is the region to send requests to.
  string region = 3 [(validate.rules).string.min_len = 1];
  // The IDs of the instances. This member is required.
  repeated string instance_ids = 4;
  // Checks whether you have the required permissions for the action, without actually making the request, and provides an error response. If you have the required permissions, the error response is DryRunOperation. Otherwise, it is UnauthorizedOperation.
  optional bool dry_run = 6;
}

message DeleteInstancesResponse {
  google.protobuf.Any data = 1;
}